# docs/swagger.yaml
@@ -30,6 +30,79 @@ definitions:
       phoneNumber:
         type: string
     type: object
+  github_com_FantomStudy_fluffy-doodle_internal_models.Achievement:
+    properties:
+      createdAt:
+        type: string
+      deletedAt:
+        $ref: '#/definitions/gorm.DeletedAt'
+      description:
+        type: string
+      icon:
+        type: string
+      id:
+        type: integer
+      name:
+        type: string
+      updatedAt:
+        type: string
+    type: object
+  github_com_FantomStudy_fluffy-doodle_internal_models.Role:
+    properties:
+      createdAt:
+        type: string
+      deletedAt:
+        $ref: '#/definitions/gorm.DeletedAt'
+      id:
+        type: integer
+      name:
+        type: string
+      updatedAt:
+        type: string
+      users:
+        items:
+          $ref: '#/definitions/github_com_FantomStudy_fluffy-doodle_internal_models.User'
+        type: array
+    type: object
+  github_com_FantomStudy_fluffy-doodle_internal_models.User:
+    properties:
+      achievements:
+        description: Достижения
+        items:
+          $ref: '#/definitions/github_com_FantomStudy_fluffy-doodle_internal_models.Achievement'
+        type: array
+      avatar:
+        type: string
+      createdAt:
+        type: string
+      deletedAt:
+        $ref: '#/definitions/gorm.DeletedAt'
+      fullName:
+        type: string
+      id:
+        type: integer
+      login:
+        type: string
+      phoneNumber:
+        type: string
+      role:
+        $ref: '#/definitions/github_com_FantomStudy_fluffy-doodle_internal_models.Role'
+      roleId:
+        description: Роль
+        type: integer
+      stars:
+        type: integer
+      updatedAt:
+        type: string
+    type: object
+  gorm.DeletedAt:
+    properties:
+      time:
+        type: string
+      valid:
+        description: Valid is true if Time is not NULL
+        type: boolean
+    type: object
 host: localhost:3000
 info:
   contact: {}
@@ -175,6 +248,60 @@ paths:
       summary: Registration
       tags:
       - auth
+  /user/avatar:
+    post:
+      consumes:
+      - multipart/form-data
+      description: Загрузка аватарки пользователя в S3
+      parameters:
+      - description: Файл аватарки
+        in: formData
+        name: avatar
+        required: true
+        type: file
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/github_com_FantomStudy_fluffy-doodle_internal_api_presenter.AuthSwaggerSuccessResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/github_com_FantomStudy_fluffy-doodle_internal_api_presenter.AuthSwaggerErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_FantomStudy_fluffy-doodle_internal_api_presenter.AuthSwaggerErrorResponse'
+      summary: Upload avatar
+      tags:
+      - user
+  /user/profile:
+    get:
+      description: Получение профиля текущего пользователя
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/github_com_FantomStudy_fluffy-doodle_internal_models.User'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/github_com_FantomStudy_fluffy-doodle_internal_api_presenter.AuthSwaggerErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/github_com_FantomStudy_fluffy-doodle_internal_api_presenter.AuthSwaggerErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/github_com_FantomStudy_fluffy-doodle_internal_api_presenter.AuthSwaggerErrorResponse'
+      summary: Get user profile
+      tags:
+      - user
   /user/student-invitation:
     post:
       consumes:
