# internal/api/routes/user.go
@@ -10,4 +10,6 @@ import (
 
 func UserRoutes(app *fiber.App, service service.UserService, db *gorm.DB) {
 	app.Post("/user/student-invitation", middleware.Protected(), middleware.RequireRole(db, "teacher"), handlers.InviteUser(service))
+	app.Get("/user/profile", middleware.Protected(), handlers.GetProfile(service))
+	app.Post("/user/avatar", middleware.Protected(), handlers.UploadAvatar(service))
 }
